# CausalKit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
data/: housing_health_mock.csv  kenyan_assist.csv  witch_killing.csv
notebooks/: 1__rct_walkthrough.ipynb  2__regression_command_walkthrough.ipynb  3__linear_regression_walkthrough.ipynb  4__pre-post_walkthrough.ipynb  5__fixed_effects_walkthrough.ipynb  6__instrumental_variables_walkthrough.ipynb  7__logistic_regression_walkthrough.ipynb  demo_of_regression_commands.ipynb  fixed_effects_IV_demo.ipynb  fixed_effects_demo.ipynb  iv.ipynb  linreg.ipynb  linreg_demo.ipynb  linreg_rct.ipynb  logreg.ipynb  pre_post_demo.ipynb  rct_demo.ipynb  scratch.ipynb  test.ipynb  test2.ipynb  test_3.ipynb  test_standard_errors.ipynb  witch.ipynb
src/: linreg.py
src/diagnostics/: diagnostics.py
src/displays/: display_linear.py
src/models/: iv.py  linear_model.py  linreg.py  logreg.py  nonparametric.py  panel.py
src/output/: output.py
tests/test_models/: test_iv.py  test_linreg.py  test_logreg.py  test_nonparametric.py  test_panel.py
