[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mats Dodd <mats.dodd12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
scipy = "^1.11.4"
ipython = "^8.19.0"


[tool.poetry.group.dev.dependencies]
statsmodels = "^0.14.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
